# cookiecutter-fin-server

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
hooks/post_gen/: __init__.py  command.py  config.py  files.py  gitops.py  purge.py  runner.py
hooks/post_gen/generate_ascii/: ascii_art.py  gen.py
hooks/post_gen/generate_ascii/frame/: __init__.py  border.py  framer.py  width_utils.py
{{cookiecutter.project_slug}}/: Dockerfile  Dockerfile.cpp  Makefile  Makefile.cpp  README.md  go.mod  skaffold.yaml
{{cookiecutter.project_slug}}/chart/: Chart.yaml  values.yaml
{{cookiecutter.project_slug}}/chart/templates/: _helpers.tpl  deployment.yaml  service.yaml
{{cookiecutter.project_slug}}/cmd/{{ cookiecutter.project_slug }}/: main.go
{{cookiecutter.project_slug}}/configs/: dev.yaml
{{cookiecutter.project_slug}}/infra/terraform/: main.tf
{{cookiecutter.project_slug}}/internal/config/: config.go
{{cookiecutter.project_slug}}/internal/handler/: echo.go  ping.go
{{cookiecutter.project_slug}}/internal/server/: health.go  server.go
{{cookiecutter.project_slug}}/pkg/proto/v1/: ping.proto  service.proto
{{cookiecutter.project_slug}}/runConfigurations/go/: Golang.run.xml
{{cookiecutter.project_slug}}/src/cpp/: CMakeLists.txt  main.cc
{{cookiecutter.project_slug}}/test/integration/: echo_integration_test.go  health_integration_test.go  ping_integration_test.go  testutil.go
{{cookiecutter.project_slug}}/test/unit/: unit_test.go
{{cookiecutter.project_slug}}/test/unit/config/: config_test.go
{{cookiecutter.project_slug}}/test/unit/handler/: echo_test.go  ping_test.go
{{cookiecutter.project_slug}}/test/unit/server/: health_test.go  server_test.go
